## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = kalashnikov-db

kalashnikov_db_SOURCES = \
	main.c          \
	dbman.c          \
	dbman.h          \
	configuration.h          \
	memoman.c          \
	memoman.h

kalashnikov_db_LDFLAGS = 

kalashnikov_db_LDADD = 

doc_DATA = 

docdir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(doc_DATA)

